// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.js [espree] format 1`] = `
"Assigning to rvalue (1:21)
> 1 | c.foo.bar().baz ??= result.foo.bar().baz(a.baz) &&= result.baz;
    |                     ^
  2 | "
`;

exports[`invalid.js [meriyah] format 1`] = `
"[1:19]: Unexpected token: '=' (1:19)
> 1 | c.foo.bar().baz ??= result.foo.bar().baz(a.baz) &&= result.baz;
    |                   ^
  2 | "
`;

exports[`invalid.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
c.foo.bar().baz ??= result.foo.bar().baz(a.baz) &&= result.baz;

=====================================output=====================================
c.foo.bar().baz ??= result.foo.bar().baz(a.baz) &&= result.baz;

================================================================================
`;

exports[`logical-assignment.js [meriyah] format 1`] = `
"[1:5]: Unexpected token: '=' (1:5)
> 1 | a ||= b;
    |     ^
  2 | 
  3 | a &&= \\"foo\\";
  4 | b ||= \\"foo\\";"
`;

exports[`logical-assignment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a ||= b;

a &&= "foo";
b ||= "foo";
c ??= "foo";

d &&= 42;
e ||= 42;
f ??= 42;

a.baz &&= result.baz;
b.baz ||= result.baz;
c.baz ??= result.baz;

a.foo["baz"] &&= result.foo.baz;
b.foo["baz"] ||= result.foo.baz;
c.foo["baz"] ??= result.foo.baz;

a.foo.bar().baz &&= result.foo.bar().baz;
b.foo.bar().baz ||= result.foo.bar().baz;
b.baz ||= result.baz;
c.baz ??= result.baz;

(results ||= []).push(100);
(results &&= []).push(100);
(results ??= []).push(100);

if ((thing &&= thing.original)) {
}
if ((thing &&= defaultValue)) {
}
if ((thing ||= defaultValue)) {
}
if ((thing ??= defaultValue)) {
}

f ||= (a) => a;
f &&= (a) => a;
f ??= (a) => a;

f ||= (f.toString(), (a) => a);
f &&= (f.toString(), (a) => a);
f ??= (f.toString(), (a) => a);

(results ||= results1 ||= []).push(100);
(results &&= results1 &&= []).push(100);
(results ??= results1 ??= []).push(100);

obj[incr()] ||= incr();
oobj["obj"][incr()] ||= incr();
obj[incr()] &&= incr();
oobj["obj"][incr()] &&= incr();
obj[incr()] ??= incr();
oobj["obj"][incr()] ??= incr();

=====================================output=====================================
a ||= b;

a &&= "foo";
b ||= "foo";
c ??= "foo";

d &&= 42;
e ||= 42;
f ??= 42;

a.baz &&= result.baz;
b.baz ||= result.baz;
c.baz ??= result.baz;

a.foo["baz"] &&= result.foo.baz;
b.foo["baz"] ||= result.foo.baz;
c.foo["baz"] ??= result.foo.baz;

a.foo.bar().baz &&= result.foo.bar().baz;
b.foo.bar().baz ||= result.foo.bar().baz;
b.baz ||= result.baz;
c.baz ??= result.baz;

(results ||= []).push(100);
(results &&= []).push(100);
(results ??= []).push(100);

if ((thing &&= thing.original)) {
}
if ((thing &&= defaultValue)) {
}
if ((thing ||= defaultValue)) {
}
if ((thing ??= defaultValue)) {
}

f ||= (a) => a;
f &&= (a) => a;
f ??= (a) => a;

f ||= (f.toString(), (a) => a);
f &&= (f.toString(), (a) => a);
f ??= (f.toString(), (a) => a);

(results ||= results1 ||= []).push(100);
(results &&= results1 &&= []).push(100);
(results ??= results1 ??= []).push(100);

obj[incr()] ||= incr();
oobj["obj"][incr()] ||= incr();
obj[incr()] &&= incr();
oobj["obj"][incr()] &&= incr();
obj[incr()] ??= incr();
oobj["obj"][incr()] ??= incr();

================================================================================
`;
